# homework_practical

./: .gitignore  CMakeLists.txt  README.md
cooling/: CMakeLists.txt  main.c
drive/: CMakeLists.txt  main.c
include/: config.h
lib1/: CMakeLists.txt  ping.c  ping.h  ping_pong_def.h  ping_pong_size.h  ping_pong_util.c  pong.c  pong.h  strutil.c  strutil.h  udp_sock.c  udp_sock.h
lib1/tests/: test_strutil_get_loglevel.c  test_strutil_log_format.c
powerpack/: CMakeLists.txt  main.c
